<resources>
    <string name="app_name">Pokédex</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="login_cadastro"><u>Login</u></string>
    <string name="e_mail">E-Mail :</string>
    <string name="senha">Senha</string>
    <string name="esquecer"><u>Esqueceu a senha?</u> </string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="favorite">favorite</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="pokemon_id">#%1$d</string>
    <string name="favorite_list">favorite</string>
    <string name="title_activity_pokemon_favorite_list">PokemonFavoriteListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="favorites">Favorites</string>
    <string name="flying">Flying</string>
    <string name="nome_pokemon">Name</string>
    <string name="numero_pokemon">#001</string>
    <string name="bug">Bug</string>
    <string name="password">Password :</string>
</resources>