<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5154"
    tools:context=".activities.CadastroActivity">

    <ImageView
        android:id="@+id/imgPokebola"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/flFundoBranco"
        app:srcCompat="@drawable/poke" />

    <FrameLayout
        android:id="@+id/flFundoBranco"
        android:layout_width="340dp"
        android:layout_height="440dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPokebola"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cadastrar"
        android:textAllCaps="true"
        android:textColor="#667383"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/flFundoBranco"
        app:layout_constraintStart_toStartOf="@id/flFundoBranco"
        app:layout_constraintTop_toTopOf="@id/flFundoBranco" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/e_mail"
        app:layout_constraintTop_toTopOf="@id/tfEmail"
        app:layout_constraintStart_toStartOf="@id/tfEmail"
        android:layout_marginStart="35dp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/flFundoBranco"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/flFundoBranco"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="#5E3030"
            android:background="#DDDDDD"
            android:padding="10dp"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/password"
        app:layout_constraintTop_toTopOf="@id/tfSenha"
        app:layout_constraintStart_toStartOf="@id/tfSenha"
        android:layout_marginStart="35dp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/flFundoBranco"
        app:layout_constraintTop_toBottomOf="@id/tfEmail"
        app:layout_constraintEnd_toEndOf="@id/flFundoBranco"
        android:padding="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="#5E3030"
            android:background="#DDDDDD"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="246dp"
        android:layout_height="58dp"
        android:backgroundTint="#FF5154"
        android:text="@string/cadastrar"
        android:background="@drawable/roundshapebtn"
        app:layout_constraintBottom_toBottomOf="@id/flFundoBranco"
        app:layout_constraintStart_toStartOf="@id/flFundoBranco"
        app:layout_constraintEnd_toEndOf="@id/flFundoBranco"
        app:layout_constraintTop_toBottomOf="@id/tfSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>